--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button id="six" class="number">6</button>
             <button id="minus" class="number1">-</button>
         
-            <button id="one" class="number">1</button>
+            <button id="one" oneclick="reply_click(this.id)" class="number">1</button>
             <button id="two" class="number">2</button>
             <button id="three" class="number">3</button>
             <button id="mal" class="number1">×</button>
